Bug 466765 - with 5.27.2 discover home tab never loads at startup or when selected
Summary: with 5.27.2 discover home tab never loads at startup or when selected
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.27.2
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 466865 467063 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-03-03 13:04 UTC by Rik Mills
Modified: 2023-03-08 17:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rik Mills 2023-03-03 13:04:33 UTC
SUMMARY

In Kubuntu and Lubuntu/UbuntuStudio 23.04  (which both ship discover), 5.27.2 discover 'home' tab never loads at startup, or when re-selected after viewing another tab.

Additionally, while discover is both the foreground application and the home tab is active, discover process uses a high cpu load. Selecting another tab or another app as foreground cuts off the usage.

Downstream bug: https://bugs.launchpad.net/ubuntu/+source/plasma-discover/+bug/2008968

STEPS TO REPRODUCE
1. Run the daily live 23.04  ISO from http://cdimage.ubuntu.com/kubuntu/daily-live/current/ and start discover; or
2. Install discover 5.27.2 on 22.10 via ppa:kubuntu-ppa/backports

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Packagekit: 1.2.6-3 (direct sync from debian testing/unstable)

ADDITIONAL INFORMATION

Appears to be a regression introduced by commit https://invent.kde.org/plasma/discover/-/commit/5dadd14ff12b8a6afae2c557d5948c5c66e1898c

This was confirmed by git bisect of the changes in 5.27.2 since 5.27.1, and confirmed by test adding a patch reverting that commit to our packaging.

Konsole output after several launches:

lunar@lunar:~$ plasma-discover
fetch ratings! false
adding empty sources model QStandardItemModel(0x56409f738490)
no component found for "com.ubuntu.ubuntu"
packagekitqt.transaction: Unknown Transaction property: "Sender" QVariant(QString, ":1.94")
packagekitqt.transaction: Unknown Transaction property: "Sender" QVariant(QString, ":1.94")
packagekitqt.transaction: Unknown Transaction property: "Sender" QVariant(QString, ":1.94")

which does not differ from 5.27.1 or the reverted state as far as I can see. Though there is some variation on output from testers.
Comment 2 Rik Mills 2023-03-03 16:48:54 UTC
(In reply to Aleix Pol from comment #1)
> https://invent.kde.org/plasma/discover/-/merge_requests/498

Applied to a test build. Appears to fix the issue, so thanks!
Comment 3 Aleix Pol 2023-03-03 16:49:55 UTC
Git commit a5fb09b82833437ef3aed72b4d987c9906f3ec27 by Aleix Pol i Gonzalez.
Committed on 03/03/2023 at 15:42.
Pushed by apol into branch 'master'.

pk: Don't forget to finish streams

The stream would remain open ad eternum, hoping for a finish() call that
would never come.

M  +3    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://invent.kde.org/plasma/discover/commit/a5fb09b82833437ef3aed72b4d987c9906f3ec27
Comment 4 Aleix Pol 2023-03-03 16:52:33 UTC
Git commit 29ba6422a0321ed9ccef7abe3a0a47a688b936f4 by Aleix Pol Gonzalez, on behalf of Aleix Pol i Gonzalez.
Committed on 03/03/2023 at 16:50.
Pushed by apol into branch 'Plasma/5.27'.

pk: Don't forget to finish streams

The stream would remain open ad eternum, hoping for a finish() call that
would never come.


(cherry picked from commit a5fb09b82833437ef3aed72b4d987c9906f3ec27)

M  +3    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://invent.kde.org/plasma/discover/commit/29ba6422a0321ed9ccef7abe3a0a47a688b936f4
Comment 5 Paul Worrall 2023-03-05 08:54:27 UTC
*** Bug 466865 has been marked as a duplicate of this bug. ***
Comment 6 nttkde 2023-03-08 17:38:21 UTC
*** Bug 467063 has been marked as a duplicate of this bug. ***