pk: Don't forget to finish streams

The stream would remain open ad eternum, hoping for a finish() call that
would never come.

BUG: 466765